@@ -29,7 +29,6 @@ Module::Build->new(
 		"IO::File" => "1.13",
 		"IO::Handle" => "1.08",
 		"Params::Classify" => 0,
-		"constant" => 0,
 		"integer" => 0,
 		"perl" => "5.006",
 		"strict" => 0,
