@@ -6,6 +6,8 @@
   * eliminate use of Date::JD, because it's too heavy to justify the
     minimal convenience gained from it
 
+  * eliminate use of constant.pm, for stylistic consistency
+
   * test more error cases
 
   * test behaviour around leap seconds
